--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,9 +21,9 @@ jobs:
       with:
         node-version: 14.x
         cache: 'npm'
-    - name: "Installing NPM"
-     run: npm install
-    - name: "Running Unit Tests"
-     run: npm run test:unit
-    - name: "Display softuni username"
-     run: echo "softuni-Stoychev13"
+    - name: Installing NPM
+      run: npm install
+    - name: Running Unit Tests
+      run: npm run test:unit
+    - name: Display softuni username
+      run: echo "softuni-Stoychev13"
