--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,5 +50,5 @@ jobs:
         run: npm install
       - name: Insatll Playwright Browsers
         run: npx playwright install --with-deps
-      - name: Running Unit Tests
+      - name: Running UI Tests
         run: npm run test:ui
